[PBNTR] Bug Fix: Rails Advanced Table Dark Mode

--- a/playbook/app/pb_kits/playbook/pb_advanced_table/_advanced_table.scss
+++ b/playbook/app/pb_kits/playbook/pb_advanced_table/_advanced_table.scss
@@ -157,7 +157,7 @@
 
   &.dark {
     .bg-white {
-      background-color: $bg_dark_card !important;
+      background-color: $bg_dark_card;
     }
 
     .bg-silver {
@@ -166,14 +166,6 @@
 
     .table-header-cells:first-child, td:first-child {
       box-shadow: 1px 0px 0px 0px $border_dark !important;
-    }
-
-    .table-header-cells {
-      background-color: $bg_dark_card !important;
-    }
-    
-    .table-header-cells:first-child {
-      background-color: $bg_dark_card !important;
     }
 
     .collapsible-trail {
